Customize skeleton setup.cfg for this project

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,16 +1,20 @@
 [metadata]
-name = PROJECT
-author = Jason R. Coombs
-author_email = jaraco@jaraco.com
-description = PROJECT_DESCRIPTION
+name = setuptools-pyproject-migration
+author = David Zaslavsky
+author_email = diazona@ellipsix.net
+description = Create a pyproject.toml file from setuptools configuration
 long_description = file:README.rst
-url = https://github.com/PROJECT_PATH
+url = https://github.com/diazona/setuptools-pyproject-migration
 classifiers =
-	Development Status :: 5 - Production/Stable
+	Development Status :: 1 - Planning
+	Environment :: Plugins
+	Framework :: Setuptools Plugin
 	Intended Audience :: Developers
 	License :: OSI Approved :: MIT License
 	Programming Language :: Python :: 3
 	Programming Language :: Python :: 3 :: Only
+	Topic :: Software Development
+	Topic :: System :: Archiving :: Packaging
 
 [options]
 packages = find_namespace:
