Update setup.cfg to reflect src layout
This commit changes the setuptools configuration to reflect the fact
that the source files are stored under src/ relative to the project
root.

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,7 +17,9 @@ classifiers =
 	Topic :: System :: Archiving :: Packaging
 
 [options]
-packages = find_namespace:
+packages = find:
+package_dir =
+	= src
 include_package_data = true
 python_requires = >=3.7
 install_requires =
@@ -29,6 +31,7 @@ exclude =
 	dist*
 	docs*
 	tests*
+where = src
 
 [options.extras_require]
 testing =
