setup.cfg: Update authorship
https://stackoverflow.com/a/10005265 suggests this method, sadly
multiple authors was never considered a necessity in the original Python
packaging system, so we're left with kludges like this.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = setuptools-pyproject-migration
-author = David Zaslavsky
-author_email = diazona@ellipsix.net
+author = David Zaslavsky, Stuart Longland
+author_email = diazona@ellipsix.net, me@vk4msl.com
 description = Create a pyproject.toml file from setuptools configuration
 long_description = file:README.rst
 url = https://github.com/diazona/setuptools-pyproject-migration
