--- a/setup.cfg
+++ b/setup.cfg
@@ -37,6 +37,7 @@ where = src
 testing =
 	# upstream
 	pytest >= 6
+	pytest-console-scripts >= 1.2
 	pytest-checkdocs >= 2.4
 	pytest-black >= 0.3.7; \
 		# workaround for jaraco/skeleton#22
