--- a/mypy.ini
+++ b/mypy.ini
@@ -1,5 +1,4 @@
 [mypy]
 ignore_missing_imports = True
-# required to support namespace packages
-# https://github.com/python/mypy/issues/14057
-explicit_package_bases = True
+namespace_packages = False
+mypy_path = $MYPY_CONFIG_FILE_DIR/src
