--- a/setup.cfg
+++ b/setup.cfg
@@ -23,6 +23,7 @@ package_dir =
 include_package_data = true
 python_requires = >=3.7
 install_requires =
+	setuptools
 	tomlkit
 
 [options.packages.find]
