--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,15 @@
 repos:
+- repo: https://github.com/astral-sh/ruff-pre-commit
+  # Last version of ruff which will accept "py36" as target-version
+  rev: v0.0.233
+  hooks:
+  - id: ruff
+    args:
+    - "--fix"
+    # When updating to ruff v0.0.244 or higher, this can be enabled to improve
+    # change detection by pre-commit
+    #- "--exit-non-zero-on-fix"
+
 - repo: https://github.com/psf/black
   rev: 22.6.0
   hooks:
