--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,6 +10,13 @@ repos:
     # change detection by pre-commit
     #- "--exit-non-zero-on-fix"
 
+- repo: https://github.com/pre-commit/mirrors-mypy
+  rev: v1.4.1
+  hooks:
+  - id: mypy
+    additional_dependencies:
+    - setuptools
+
 - repo: https://github.com/psf/black
   rev: 22.6.0
   hooks:
