pytest.ini: Be verbose when listing tests.
If we give `-v` here, `pytest` will dump the full `diff` of what's
different, which makes debugging a hell of a lot easier. :-)

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 norecursedirs=dist build .tox .eggs
-addopts=--doctest-modules
+addopts=-v --doctest-modules
 filterwarnings=
 	## upstream
 
