.gitignore: Update with suggested changes from PR#16.
- Clamp some entries to the project root
- Drop environment-specific entries from `.gitignore`
- Put advice on how to configure a specific workstation in the top of
  the file, for those of us who have probably learned bad habits over
  the years.
- Add some additional entries for `setuptools` generated content.

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,28 @@
-# Ignore vi swapfiles
-*.swp
-.*.swp
+# NB: please avoid putting environment specific rules here.  Many of these settings can be put in
+# ${HOME}/.config/git/ignore (aka ${XDG_CONFIG_HOME}/git/config, Windows users perhaps try AppData\Local?) -- then they
+# apply to all projects on your local workstation.
+#
+# Examples:
+# - vi swapfiles (*.sw?, .*.sw?)
+# - IntelliJ IDEA project (.idea/)
+# - VisualStudio Code project (.vscode/)
+#
+# See https://git-scm.com/docs/gitignore for further detail.
+
+# Distribution generated files
+/dist/
+
+# Build system generated files
+/build/
 
 # Ignore Python cache directories
 __pycache__/
 
 # Ignore project coverage
-.coverage
+/.coverage
 
 # Ignore tox working directory
-.tox/
+/.tox/
 
-# Ignore "egg info" directories
+# Ignore "egg info" directories (or files, if someone makes such an abomination)
 *.egg-info
-
-# Ignore the 'env' directory, may be used by developers for a local test
-# environment within the project workspace.
-env/
