--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,19 @@
 repos:
+- repo: https://github.com/pre-commit/pre-commit-hooks
+  rev: v4.4.0
+  hooks:
+  - id: check-ast
+  - id: check-merge-conflict
+  - id: check-toml
+  - id: check-vcs-permalinks
+  - id: check-yaml
+  - id: end-of-file-fixer
+  - id: name-tests-test
+    args:
+    - "--pytest-test-first"
+  - id: no-commit-to-branch
+  - id: trailing-whitespace
+
 - repo: https://github.com/astral-sh/ruff-pre-commit
   # Last version of ruff which will accept "py36" as target-version
   rev: v0.0.233
