Add a tox environment for pre-commit
I thought it made sense to have some way to run the static checks (which
are normally triggered by pre-commit) through tox, so I added this
environment to enable it. It's not a particularly useful thing to have
in general though, since people can just run pre-commit directly.

--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,16 @@ usedevelop = True
 extras =
 	testing
 
+# There is very little advantage to using the pre_commit tox environment,
+# compared to running pre-commit directly, but we provide it in case you want to
+# use it. For example, if you don't want to install pre-commit locally.
+[testenv:pre_commit]
+deps =
+	pre-commit
+commands =
+	pre-commit run --all-files
+skip_install = True
+
 [testenv:docs]
 extras =
 	docs
