--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,6 +35,8 @@ jobs:
         - ubuntu-latest
         - macos-latest
         - windows-latest
+        force-minimum-dependencies:
+        - false
         exclude:
         # Python 3.6 does not run on ubuntu-latest
         - python: "3.6"
@@ -42,25 +44,44 @@ jobs:
         include:
         - python: "3.6"
           platform: ubuntu-20.04
+          force-minimum-dependencies: false
         - python: "3.7"
           platform: ubuntu-latest
+          force-minimum-dependencies: false
         - python: "3.9"
           platform: ubuntu-latest
+          force-minimum-dependencies: false
         - python: "3.10"
           platform: ubuntu-latest
+          force-minimum-dependencies: false
         - python: "3.12"
           platform: ubuntu-latest
+          force-minimum-dependencies: false
         - python: pypy3.6
           platform: ubuntu-latest
+          force-minimum-dependencies: false
         - python: pypy3.7
           platform: ubuntu-latest
+          force-minimum-dependencies: false
         - python: pypy3.8
           platform: ubuntu-latest
+          force-minimum-dependencies: false
         - python: pypy3.9
           platform: ubuntu-latest
+          force-minimum-dependencies: false
+        # For testing forced minimum deps, use both the earliest and latest stable
+        # (non-dev) versions of Python on which this package and the pinned
+        # dependencies can be installed
+        - python: "3.6"
+          platform: ubuntu-20.04
+          force-minimum-dependencies: true
+        - python: "3.11"
+          platform: ubuntu-latest
+          force-minimum-dependencies: true
     with:
       python-version: ${{ matrix.python }}
       platform: ${{ matrix.platform }}
+      force-minimum-dependencies: ${{ matrix.force-minimum-dependencies }}
   docs:
     name: Build the documentation locally
     uses: ./.github/workflows/docs.yml
