--- a/setup.cfg
+++ b/setup.cfg
@@ -49,8 +49,10 @@ testing =
 	pytest-mypy >= 0.9.1; \
 		# workaround for jaraco/skeleton#22
 		python_implementation != "PyPy"
-	pytest-enabler >= 2.2
-	pytest-ruff
+	pytest-enabler >= 2.2; \
+		python_version >= "3.8"
+	pytest-ruff; \
+		python_version >= "3.7"
 
 	# local
 	types-setuptools
