Add a `dumpmeta` debug command
Putting this in a separate branch as this is not intended to be shipped
in the final distribution, but rather is present to enable discovery of
where the various pieces of metadata hide.

--- a/setup.cfg
+++ b/setup.cfg
@@ -82,3 +82,4 @@ console_scripts =
 	setuptools-pyproject-migration = setuptools_pyproject_migration.cli:main
 distutils.commands =
 	pyproject = setuptools_pyproject_migration:WritePyproject
+	dumpmeta = setuptools_pyproject_migration:DumpMetadata
