--- a/setup.cfg
+++ b/setup.cfg
@@ -73,3 +73,4 @@ docs =
 [options.entry_points]
 distutils.commands =
 	pyproject = setuptools_pyproject_migration:WritePyproject
+	dumpmeta = setuptools_pyproject_migration:DumpMetadata
