Add additional project URLs
These URLs will display in PyPI.

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,10 @@ author_email = diazona@ellipsix.net, me@vk4msl.com
 description = Create a pyproject.toml file from setuptools configuration
 long_description = file:README.rst
 url = https://github.com/diazona/setuptools-pyproject-migration
+project_urls =
+	Documentation = https://setuptools-pyproject-migration.readthedocs.io/
+	Source = https://github.com/diazona/setuptools-pyproject-migration
+	Issues = https://github.com/diazona/setuptools-pyproject-migration/issues
 classifiers =
 	Development Status :: 2 - Pre-Alpha
 	Environment :: Plugins
