Fix name of README file
The metadata was using README.rst, as a relic of this project's origins,
but we actually use a Markdown file so I'm changing it to README.md.

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = setuptools-pyproject-migration
 author = David Zaslavsky, Stuart Longland
 author_email = diazona@ellipsix.net, me@vk4msl.com
 description = Create a pyproject.toml file from setuptools configuration
-long_description = file:README.rst
+long_description = file:README.md
 url = https://github.com/diazona/setuptools-pyproject-migration
 classifiers =
 	Development Status :: 2 - Pre-Alpha
