--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -42,6 +42,11 @@ repos:
   hooks:
   - id: actionlint-docker
 
+- repo: https://github.com/igorshubovych/markdownlint-cli
+  rev: v0.35.0
+  hooks:
+  - id: markdownlint-fix
+
 ci:
   skip:
   # pre-commit.ci doesn't have Docker available
