--- a/pytest.ini
+++ b/pytest.ini
@@ -27,3 +27,9 @@ filterwarnings=
 	## end upstream
 
 	ignore:The distutils package is deprecated and slated for removal:DeprecationWarning
+
+	ignore:setuptools.installer (is|and fetch_build_eggs are) deprecated::setuptools
+	ignore:'encoding' argument not specified::setuptools
+	ignore:pkg_resources is deprecated as an API:DeprecationWarning
+	ignore:module 'sre_constants' is deprecated:DeprecationWarning:pkg_resources._vendor.pyparsing
+	ignore:.+ is shallow and may cause errors:UserWarning:setuptools_scm.git
