Ignore a warning about deprecated distutils
A warning about the deprecation of distutils in Python 3.12 appears in
CI when running under Python 3.11 with old versions of our dependencies.
(Most likely it's related to using old setuptools, but I can't reproduce
it locally so I can't be sure.) This warning isn't relevant to us
because we can import the vendored version of distutils from setuptools
itself, so I'm setting the warning filter up to ignore it.

--- a/pytest.ini
+++ b/pytest.ini
@@ -25,3 +25,5 @@ filterwarnings=
 	ignore:'encoding' argument not specified::build.env
 
 	## end upstream
+
+	ignore:The distutils package is deprecated and slated for removal:DeprecationWarning
