--- a/tox.ini
+++ b/tox.ini
@@ -24,7 +24,7 @@ extras =
 	testing
 changedir = docs
 commands =
-	python -m sphinx -W --keep-going . {toxinidir}/build/html
+	python -m sphinx -vv -W --keep-going . {toxinidir}/build/html
 	python -m sphinxlint
 
 [testenv:finalize]
