--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -30,7 +30,9 @@ repos:
   hooks:
   - id: mypy
     additional_dependencies:
+    - pyproject-metadata
     - setuptools
+    - types-requests
 
 - repo: https://github.com/psf/black
   rev: 23.9.1
