Skip slow tests in pre-/post-merge
This commit adds a marker for slow tests and arranges to skip them
during pre-merge and post-merge tests. They will only run during
pre-release testing.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,15 @@
 name: Pre-merge and post-merge tests
 
-on: [push, pull_request]
+on:
+  push:
+  pull_request:
+  workflow_dispatch:
+    inputs:
+      run-slow:
+        description: "Whether to run slow tests (normally they are skipped)"
+        type: boolean
+        required: false
+        default: false
 
 permissions:
   contents: read
@@ -46,6 +55,7 @@ jobs:
       python-version: ${{ matrix.python }}
       platform: ${{ matrix.platform }}
       force-minimum-dependencies: ${{ matrix.force-minimum-dependencies }}
+      run-slow: ${{ inputs.run-slow || false }}
   docs:
     name: Build documentation
     uses: ./.github/workflows/docs.yml
