--- a/pytest.ini
+++ b/pytest.ini
@@ -34,3 +34,6 @@ filterwarnings=
 	ignore:module 'sre_constants' is deprecated:DeprecationWarning:pkg_resources._vendor.pyparsing
 	ignore:.+ is shallow and may cause errors:UserWarning:setuptools_scm.git
 pythonpath=test_support
+markers =
+	slow: tests that take a longer time to run
+	needs_network: tests that need to download data from the internet
