Update development status to alpha
As in a previous commit, I'm using this blog post as a reference:
  https://martin-thoma.com/software-development-stages/
It says that alpha software should have the minimal required set of
features to be useful and the architecture is clear. I believe we've
reached that level, so a status update seems appropriate.

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,7 +10,7 @@ project_urls =
 	Source = https://github.com/diazona/setuptools-pyproject-migration
 	Issues = https://github.com/diazona/setuptools-pyproject-migration/issues
 classifiers =
-	Development Status :: 2 - Pre-Alpha
+	Development Status :: 3 - Alpha
 	Environment :: Plugins
 	Framework :: Setuptools Plugin
 	Intended Audience :: Developers
