--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -49,6 +49,11 @@ repos:
   hooks:
   - id: markdownlint-fix
 
+- repo: https://github.com/twisted/towncrier
+  rev: 23.6.0
+  hooks:
+  - id: towncrier-check
+    files: $changelog\.d/
 ci:
   skip:
   # pre-commit.ci doesn't have Docker available
