Set long description content type to text/markdown
Prior to this change, the description on PyPI shows up as raw Markdown
code. Hopefully this will get PyPI to interpret it as Markdown and show
the properly formatted version.

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,7 @@ author = David Zaslavsky, Stuart Longland
 author_email = diazona@ellipsix.net, me@vk4msl.com
 description = Create a pyproject.toml file from setuptools configuration
 long_description = file:README.md
+long_description_content_type = text/markdown
 url = https://github.com/diazona/setuptools-pyproject-migration
 project_urls =
 	Documentation = https://setuptools-pyproject-migration.readthedocs.io/
