issue 100: tox.ini: Define new test to check script loads and runs

--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,13 @@ usedevelop = True
 extras =
 	testing
 
+[testenv:script]
+# Deliberately blank to override the defaults set above
+deps =
+extras =
+commands =
+	setup-to-pyproject --help
+
 # There is very little advantage to using the pre_commit tox environment,
 # compared to running pre-commit directly, but we provide it in case you want to
 # use it. For example, if you don't want to install pre-commit locally.
