GH Issue 77: Add `spdx-lookup` module to dependencies

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,7 @@ install_requires =
 	setuptools >= 66.1; python_version >= "3.12"
 	tomlkit
 	typing-extensions >=4, <5
+	spdx-lookup
 
 [options.packages.find]
 exclude =
