fixup! Fake a failure to test CI

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -97,4 +97,4 @@ jobs:
       - name: Fake a failure on prerelease Python
         continue-on-error: ${{!steps.python-is-stable.outputs.stable}}
         run: >
-          [[ ${{inputs.python-version}} == "3.14" ]] && false
+          [[ "${{inputs.python-version}}" != "3.14" ]]
