--- a/setup.cfg
+++ b/setup.cfg
@@ -82,3 +82,7 @@ console_scripts =
 	setuptools-pyproject-migration = setuptools_pyproject_migration.cli:main
 distutils.commands =
 	pyproject = setuptools_pyproject_migration:WritePyproject
+
+[options.package_data]
+* =
+    *.json
